# tech-will

./: .gitignore  README.md  pyproject.toml  techwill.yaml.example
.claude/skills/tech-will/: SKILL.md  skill.py
.github/workflows/: ci.yml
techwill/: __init__.py  cache.py  cli.py  config.py  generator.py  llm.py  models.py
techwill/analyzers/: __init__.py  bus_factor.py  knowledge_map.py  unfinished.py  warning_severity.py
techwill/extractors/: __init__.py  branches.py  commits.py  issues.py  prs.py  todos.py  warnings.py
tests/: test_branches_extractor.py  test_bus_factor_analyzer.py  test_cache.py  test_cli.py  test_commits_extractor.py  test_config.py  test_generator.py  test_issues_extractor.py  test_knowledge_map_analyzer.py  test_prs_extractor.py  test_skill_wrapper.py  test_todo_extractor.py  test_unfinished_analyzer.py  test_warning_severity_analyzer.py  test_warnings_extractor.py
